--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Wirerfame Exercise</title>
+        <title>Wireframe Exercise</title>
     </head>
     <body>
         <header>
@@ -31,27 +31,11 @@
                 <img src="https://placehold.it/480x400/000">
                 <div>
                 <h3>Feature Section Heading</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                    <p> Tempore assumenda dicta veniam natus voluptates debitis </p>
-                     <p> quae quod beatae maiores sequi dignissimos </p>
-                      <p>exercitationem fuga reiciendis voluptate,</p>
-                      <p> expedita cumque nisi numquam error.</p>
-                      <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                      <p> Tempore assumenda dicta veniam natus voluptates debitis </p>
-                       <p> quae quod beatae maiores sequi dignissimos </p>
-                        <p>exercitationem fuga reiciendis voluptate,</p>
-                        <p> expedita cumque nisi numquam error.</p>
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                        <p> Tempore assumenda dicta veniam natus voluptates debitis </p>
-                         <p> quae quod beatae maiores sequi dignissimos </p>
-                          <p>exercitationem fuga reiciendis voluptate,</p>
-                          <p> expedita cumque nisi numquam error.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, suscipit facere. Architecto nobis magni sit corrupti aut aperiam error atque harum nemo, distinctio, odit laborum cum quo! Mollitia, voluptates doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, neque ea. Sequi quo sed nobis repellat, nam mollitia facilis beatae consequatur ullam suscipit inventore facere eos, placeat ipsum. Ex, velit? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi illum inventore obcaecati nulla, cum beatae, doloremque repudiandae nesciunt explicabo labore, quod consequuntur a praesentium aperiam et sequi non quos eaque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, cupiditate nihil? Modi ab voluptas doloribus molestiae, corrupti recusandae? Reiciendis laboriosam officiis odio cupiditate saepe autem atque totam quod omnis nulla. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ducimus id illum qui, minus earum reprehenderit corporis repellendus molestias tempore iusto tempora pariatur nemo assumenda quo eius ipsa quis officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, reprehenderit porro et eum distinctio quas quis quod ea fugiat nulla soluta optio ullam molestias ipsa voluptatibus! Accusamus numquam nostrum totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nisi ipsa perspiciatis, maxime esse illum id optio ratione vel placeat modi dolor reprehenderit impedit iusto inventore vitae nulla eaque doloribus!</p>
 
             </div>
-
+            <a href="">Call to Action</a>
             </span>
-            <!--<a href="">Call To Action</a> -->
-
         </main>
 
 
