--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
             <nav>
                 <img src="https://placehold.it/200x70/000">
+                <div>
                 <a href="">Nav Item 1</a>
                 <a href="">Nav Item 2</a>
                 <a href="">Nav Item 3</a>
                 <a href="">Nav Item 4</a>
+                </div>
             </nav>
 
         </header>
